# academic-cucei

./: .gitignore  README.md
compilers/: lexanalizer.cpp  parser.cpp  test.njava
compilers/code/source/: main.cpp
compilers/nJavaCompiler/: CMakeLists.txt
compilers/nJavaCompiler/code/: CMakeLists.txt
compilers/nJavaCompiler/code/headers/: main.hpp  parser.hpp  scanner.hpp  tokenlexeme.hpp
compilers/nJavaCompiler/code/source/: main.cpp  parser.cpp  scanner.cpp
compilers/nJavaCompiler/resources/: test.njava
compilers/njava_compiler/: test2.njava
compilers/njava_compiler/code/headers/: main.hpp  scanner.hpp  tokenlexeme.hpp
computer_graphics/: 2d.c  generateInput.py  input.in  matrix.h  multiply_matrices.c  test_matrix.c  test_transforms.c
contest_problems/: 3n+1.cpp  add_parentheses.py  anagrams.cpp  anagrams.in  bin_packing.cpp  bin_packing.in  blocks.c  coj2082.in  coj2082_strangebb.cpp  id_codes.cpp  id_codes.in  maximum_sum.cpp  maximum_sum.in  power_crisis.cpp  rand_index.py  right_interval.py  simulation_wizardry.cpp  simulation_wizardry.in  simulation_wizardry.py.gen  spot_game.cpp
cryptography/: decrypt  decrypt.c  encrypt  encrypt.c  generate_key_pair  generate_key_pair.c  hola.txt
data_structures/: binary_heap.c  dl_list.c  dl_list.h  matrix.c  matrix.h
expert_systems/formulas/: .formulas.l.swp  .formulas.y.swp  Makefile  formulas.l  formulas.y  input.in
fault_tolerant/: digit_count.cpp  odd_sum.cpp
graphs/: dl_list.c  dl_list.h  graph_algorithms.c  graph_algorithms.in
parallel/: matmul_omp.c
(+2 files in other folders)
